removed file index.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,86 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Caveat&family=Oswald:wght@200&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="./style/index.css">
+
+<div class="container">
+  <h1>Shenandoah Veele</h1>
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+      <a href="projects.html">Projects</a>
+    </nav>
+  </header>
+</div>
+<br>
+<section class="content-row">
+  <img src=https://images.unsplash.com/photo-1567838060469-0458c46fc4ca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=282&q=80>
+  <div>
+    <h2>Shenandoah Veele</h2>
+    <a href="button" class="projects">My Projects</a>
+    <p>Hello! Thanks for stopping by. I am developing myself as a web developer. I am a student at Lambda School and look forward to continued growth and development.</p>
+  </div>
+</section>
+<!--
+<section class="pics">
+  <img src="https://unsplash.it/200/200">
+  <img src="https://unsplash.it/200/200">
+  <img src="https://unsplash.it/200/200">
+  <img src="https://unsplash.it/200/200">
+  <img src="https://unsplash.it/200/200">
+  <img src="https://unsplash.it/200/200">
+  <img src="https://unsplash.it/200/200">
+</section> -->
+<section class="pics">
+  <figure>
+    <img src="https://unsplash.it/200/200">
+    <figcaption>Watch This Space</figcaption>
+  </figure>
+  <figure>
+    <img src="https://unsplash.it/200/200">
+    <figcaption>Watch This Space</figcaption>
+  </figure>
+  <figure>
+    <img src="https://unsplash.it/200/200">
+    <figcaption>Watch This Space</figcaption>
+  </figure>
+  <figure>
+    <img src="https://unsplash.it/200/200">
+    <figcaption>Watch This Space</figcaption>
+  </figure>
+  <figure>
+    <img src="https://unsplash.it/200/200">
+    <figcaption>Watch This Space</figcaption>
+  </figure>
+  <figure>
+    <img src="https://unsplash.it/200/200">
+    <figcaption>Watch This Space</figcaption>
+  </figure>
+  <figure>
+    <img src="https://unsplash.it/200/200">
+    <figcaption>Watch This Space</figcaption>
+  </figure>
+  <figure>
+    <img src="https://unsplash.it/200/200">
+    <figcaption>Watch This Space</figcaption>
+  </figure>
+</section>
+<footer>
+  <h3>Like what you see?</h3>
+  <a href="button" class="contact">Contact Me</a>
+    <div>
+      <br>
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-youtube"></a>
+      
+   </div>
+</footer
 </body>
 </html>
