updated files added css and html coding, fixed bad links

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <body>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,6 @@
   <h1>Shenandoah Veele</h1>
   <header>
     <nav>
-      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
       <a href="projects.html">Projects</a>
@@ -27,7 +27,7 @@
   <img src=https://images.unsplash.com/photo-1567838060469-0458c46fc4ca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=282&q=80>
   <div>
     <h2>Shenandoah Veele</h2>
-    <a href="button" class="projects">My Projects</a>
+    <a href="projects.html" class="projects">My Projects</a>
     <p>Hello! Thanks for stopping by. I am developing myself as a web developer. I am a student at Lambda School and look forward to continued growth and development.</p>
   </div>
 </section>
@@ -77,13 +77,13 @@
 </section>
 <footer>
   <h3>Like what you see?</h3>
-  <a href="button" class="contact">Contact Me</a>
+  <a href="contact.html" class="contact">Contact Me</a>
     <div>
       <br>
-      <a href="#" class="fa fa-facebook"></a>
+      <a href="https://www.facebook.com/shenandoah.veele" class="fa fa-facebook"></a>
       <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-instagram"></a>
-      <a href="#" class="fa fa-youtube"></a>
+      <a href="https://www.instagram.com/?hl=en" class="fa fa-instagram"></a>
+      <a href="https://www.youtube.com/channel/UCcNnheonIVYSrf3w9ueSllA?view_as=subscriber" class="fa fa-youtube"></a>
       
    </div>
 </footer
