--- a/projects.html
+++ b/projects.html
@@ -3,15 +3,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    <link rel="stylesheet" href="projects.css" type="text/css">
     <div class="container">
-      <h1>A few of my Projects</h1>
+      <h1>A few of my projects</h1>
       <header>
         <nav>
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
-          <a href="project.html">Projects</a>
+          
         </nav>
       </header>
     </div>
