updated css, animated buttons, adjusted social media icons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Shenandoah Veele</h1>
         <div class="container">
           <nav>
-            <a href="about.html">About</a>
+            <a class="button" href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="projects.html">Projects</a>
           </nav>
